--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     # Dockerfile を指定
     network_mode: "host"
     environment:
-      - host=localhost
+      - host=127.0.0.1
     ports:
-      - "8080:8080"
+      - "17532:8080"
 volumes:
   dbdata:
